--- a/views/langs.pug
+++ b/views/langs.pug
@@ -1,7 +1,8 @@
 mixin langs
-    +menu-item('#en', 'ENG').main-lang&attributes(attributes)
-    +menu-item('#de', 'DE').main-lang&attributes(attributes)
-    +menu-item('#fr', 'FR').main-lang&attributes(attributes)
-    +menu-item('#ru', 'РУС').main-lang&attributes(attributes)
-    +menu-item('#ch', '中文').main-lang&attributes(attributes)
-    +menu-item('#ar', 'لعربية').main-lang&attributes(attributes)
+    +menu-item('/en', 'ENG')&attributes(attributes)
+    +menu-item('/de', 'DE')&attributes(attributes)
+    +menu-item('/fr', 'FR')&attributes(attributes)
+    +menu-item('/es', 'ES')&attributes(attributes)
+    +menu-item('/ru', 'РУС')&attributes(attributes)
+    +menu-item('/ch', '中文')&attributes(attributes)
+    +menu-item('/ar', 'لعربية')&attributes(attributes)
