Minimalistic mobile button.

--- a/views/main.pug
+++ b/views/main.pug
@@ -60,7 +60,7 @@ html
             #about.container
                 .row
                     .col-md-12
-                        h2 Общий принцип работы
+                        h2 Принцип работы
                         hr
                         img(src='/img/main_di.svg').center-block.rp-diagram
                         h2 Обмен
