--- a/public/css/all.css
+++ b/public/css/all.css
@@ -33,6 +33,10 @@ body {
     background-color: #555;
 }
 
+h2 {
+    margin-top: 120px;
+}
+
 .rp-footer {
     padding: 50px 0;
     color: white;
@@ -54,6 +58,10 @@ body {
 
 .rp-content {
     background-color: white;
+}
+
+.rp-content:not(.rp-first-slide) {
+    padding-bottom: 150px;
 }
 
 .rp-hello-container {
@@ -83,31 +91,8 @@ body {
     color: #555;
 }
 
-.rp-about {
-    border-top: 2px solid #555;
-}
-
 .rp-about .rp-diagram {
     width: 50%;
-}
-
-.rp-about h2 {
-    margin-top: 120px;
-}
-
-@media (max-width: 767px) {
-    .rp-hello-container {
-        height: calc(100vh - 50px);
-    }
-
-    .rp-hello-container .rp-hello {
-        font-size: 250%;
-        margin-top: 0;
-    }
-
-    .rp-about .rp-diagram {
-        width: 100%;
-    }
 }
 
 .cs-social {
@@ -141,4 +126,31 @@ body {
 .cs-social.cs-github {
      background: url('../img/github.svg') no-repeat;
      background-size: 85px;
+}
+
+.rp-total-divider {
+    border-top: 2px solid #555;
+}
+
+.rp-ico .rp-ico-time {
+    font-size: 700%;
+}
+
+@media (max-width: 767px) {
+    .rp-hello-container {
+        height: calc(100vh - 50px);
+    }
+
+    .rp-hello-container .rp-hello {
+        font-size: 250%;
+        margin-top: 0;
+    }
+
+    .rp-about .rp-diagram {
+        width: 100%;
+    }
+
+    .rp-ico .rp-ico-time {
+        font-size: 250%;
+    }
 }
