Another sections stub.

--- a/views/main.pug
+++ b/views/main.pug
@@ -138,19 +138,27 @@ html
                     .col-md-12
                         h2 ICO
                         p abc
-                        .rp-ico-time.text-center 01 december 2017
+                        .rp-ico-time.text-center 10 января 2018
 
         .rp-content.rp-docs.rp-total-divider
             #docs.container
                 .row
+                    .col-md-12
+                        h2 Документы
+                        p abc
 
         .rp-content.rp-roadmap.rp-total-divider
             #roadmap.container
                 .row
+                    .col-md-12
+                        h2 Дорожная карта
+                        p abc
 
         .rp-content.rp-team.rp-total-divider
             #team.container
                 .row
+                    .col-md-12
+                        h2 Команда
 
         script(src='js/lib/jquery.js')
         script(src='js/lib/bootstrap.js')
