--- a/views/main.pug
+++ b/views/main.pug
@@ -64,73 +64,131 @@ html
                         hr
                         img(src='/img/main_di.svg').center-block.rp-diagram
                         h3 RPT - Right Platform Token
-                        p ERC20 токен
+                        p.
+                            ERC20 токен
                         h3 RPO - Right Platform Organization
-                        p ERC20 токен
+                        p.
+                            ERC20 токен
                         h3 RPR - Right Platform Right
-                        p ERC20 токен
+                        p.
+                            ERC20 токен
                         h2 Обмен
                         hr
                         img(src='/img/exchange_di.svg').center-block.rp-diagram
                         h3 Buy
-                        p abc
+                        p.
+                            abc
                         h3 Exchange
-                        p abc
+                        p.
+                            abc
                         h2 Организации
                         hr
                         img(src='/img/rpo_di.svg').center-block.rp-diagram
                         h3 Controls
-                        p abc
+                        p. 
+                            abc
                         br
                         h4 M-control
-                        p abc
+                        p.
+                            Управление организацией происходит установленной группой лиц.
+                            При необходимости группа владельцев может быть расширена или кто-либо может быть
+                            исключен. Все действия должны быть подтверждены голосованием, это может быть большинство
+                            голосов или же полное согласие всех владельцев. Правила определения принятия решений
+                            устанавливаются при создании организации, но также могут быть изменены в процессе
+                            существования путем голосования владельцев. При создании и в процессе голосования
+                            может быть изменен вес голоса каждого владельца организации.
                         br
                         h4 V-control
-                        p abc
+                        p.
+                            Аналог M-control, однаков данном случае веса голосов определяются количеством RPO-токенов
+                            организации на счету владельца. При этом возможно 2 варианта управления - свободное, когда
+                            владельцем считается любой кто владеет хотябы одним RPO-токеном организации, либо когда
+                            круг возможных владельцев ограничен, но вес их голоса вычисляется по количеству RPO-токенов
+                            на их счету. Возможет вариант установки минимального порога количества RPO-токенов для
+                            участия в голосовании.
                         br
                         h4 S-control
-                        p abc
+                        p.
+                            Упрощенный способ контроля организации когда владельцем является одна персона. При этом,
+                            при необходимости, организация может быть преобразована в любой другой тип организаций.
                         br
                         h3 Features
-                        p abc
+                        p.
+                            abc
                         br
                         h4 Fixed
-                        p abc
+                        p.
+                            Количество токенов огранизации может быть ограниченно фиксированным количеством.
                         br
                         h4 PoS
-                        p abc
+                        p.
+                            Количество токенов может увеличиваться со временем по приципу Proof of Stake - в
+                            случае если на счету определенное количество времени хранится определенное количество
+                            токенов - на счет начисляются дополнительные токены. Время хранения, минимальный
+                            порог токенов и количество устанавливается при создании. Также настройки могут быть
+                            изменены в процессе голосования, за исключением случая когда при создании организации
+                            был явно указан запрет на внесение изменений в PoS.
                         br
                         h4 Dividends
-                        p abc
+                        p.
+                            Владельцам организации могут выплачиваться дивиденды от доходов организации от продаж
+                            RPR-токенов (описание RPR-токенов находится в следующем разделе). Дивиденды могут быть
+                            в виде пропорциональной части от полной суммы полученных доходов, либо от процента от
+                            полной суммы полученных доходов. Также может быть установлен минимальный порог количества
+                            токенов для получения дивидендов, а также может быть установлен явный список получателей.
+                            Дивиденды также могут быть и в виде RPO-токенов организации, что с каждой продажей будет
+                            увеличивать общее число токенов огранизации. К такому виду дивидендов также могут быть
+                            применены правила полной или процентной суммы, минимального порога и списка получателей.
+                            В огранизации может использоваться сразу оба вида начисления дивидендов. Также ситема
+                            начисления дивидендов может работать без конфликтов вместе с PoS.
                         br
                         h4 Final
-                        p abc
+                        p.
+                            Особое свойство огранизации, окончательно фиксирующее все установленные правила работы
+                            организации, описанные выше. Это также означает что правила невозможно изменить и в ходе
+                            голосования.
                         br
                         h4 Replication
-                        p abc
+                        p.
+                            Организация может являться копией другой организации, с сохранением всех балансов счетов
+                            и, опционально, с сохранением всех созданных RPR-токенов с учетом всех балансов.
+                            Копирование свойств происходит единожды, то есть в техническом плане это свойство создает
+                            форк другой организации. Также, при неоходимости, возможно изменить некоторые из правил
+                            организации, а также изменить владельцев, но с сохранением балансов RPO-токенов. Это
+                            свойство не копирует баланс RPT-токенов платформы так как копирование не переносит
+                            ценности на копию, в противном случае это означало бы неконтролируемую эмиссию. Однако,
+                            в случае если у обоих организаций одини и те же владельцы, RTP-токены могут быть
+                            переведены простым переводом внутри системы.
                         h2 Права
                         hr
                         img(src='/img/rpr_di.svg').center-block.rp-diagram
                         h3 Properties
-                        p abc
+                        p.
+                            abc
                         br
                         h4 Limitable
-                        p abc
+                        p.
+                            abc
                         br
                         h4 Mintable
-                        p abc
+                        p.
+                            abc
                         br
                         h4 Markable
-                        p abc
+                        p.
+                            abc
                         br
                         h3 Features
-                        p abc
+                        p.
+                            abc
                         br
                         h4 PoS
-                        p abc
+                        p.
+                            abc
                         br
                         h4 Replication
-                        p abc
+                        p.
+                            abc
 
         .rp-content.rp-ico.rp-total-divider
             #ico.container
