Exchange raw description.

--- a/views/main.pug
+++ b/views/main.pug
@@ -52,7 +52,7 @@ html
                 .row
                     .col-md-12.text-center.rp-hello-container
                         p.rp-hello-spacer
-                        h1.rp-hello Right Platform
+                        h1.rp-hello Rights Platform
                         p.rp-hello-hint!= erb('l.about.hint')
                         a(href='#about'): +icon('chevron-down').rp-go-down.hidden-xs
 
@@ -77,10 +77,21 @@ html
                         img(src='/img/exchange_di.svg').center-block.rp-diagram
                         h3 Buy
                         p.
-                            abc
+                            RPR и RPO (V-control) токены могут использовать штатный механизм ICO в рамках системы.
+                            Возможен механизм продаж с неизменным курсом, а также с бонусной системой. Бонусная система
+                            может иметь механизм начисления бонуса в зависимости от времени, прошедшего с момента
+                            начала первичных продаж, а также иметь зависимость от количества приобретенных
+                            токенов. Также возможна настройка, позволяющая реализовать покупку токенов пакетами,
+                            разделенными по временным промежуткам с рыночной регуляцией стоимости токенов в каждом
+                            пакете. Также можно заранее ограничить количество этапов ICO и жестко закрепить правила
+                            их проведения. Особенности начиления доходов от прибыли описаны в соответствующих разделах
+                            соответствующих токенов. Покупка на ICO осуществляется в RPT-токенах.
+                            
                         h3 Exchange
                         p.
-                            abc
+                            RPT, RPO и RPR токены являются ERC20 токенами - они могут быть свободно
+                            обмениваться на любой криптовалютной бирже, а по причине полного соответствия стандарту
+                            ERC20 - подключение токена к обмену является обыденной и тривиальной задачей.
                         h2 Организации
                         hr
                         img(src='/img/rpo_di.svg').center-block.rp-diagram
@@ -100,12 +111,21 @@ html
                         br
                         h4 V-control
                         p.
-                            Аналог M-control, однаков данном случае веса голосов определяются количеством RPO-токенов
-                            организации на счету владельца. При этом возможно 2 варианта управления - свободное, когда
-                            владельцем считается любой кто владеет хотябы одним RPO-токеном организации, либо когда
-                            круг возможных владельцев ограничен, но вес их голоса вычисляется по количеству RPO-токенов
-                            на их счету. Возможет вариант установки минимального порога количества RPO-токенов для
-                            участия в голосовании.
+                            Аналог M-control, однако в данном случае веса голосов определяются количеством RPO-токенов
+                            организации на счету владельца. При этом возможно два варианта управления - свободное,
+                            когда владельцем считается любой кто владеет хотябы одним RPO-токеном организации, либо
+                            когда круг возможных владельцев ограничен, но вес их голоса вычисляется по количеству
+                            RPO-токенов на их счету. Возможет вариант установки минимального порога количества
+                            RPO-токенов для участия в голосовании. В случае проведения ICO прибыль распределяется между
+                            владельцами пропорционально количеству токенов, которыми они владели в момент начала ICO.
+                            Также возможно установить минимальный порог количества токенов для получения прибылей от
+                            ICO. Токены для продажи могут поступать из двух источников. В первом случае они
+                            пропорционально вычитаются из долей каждого кто будет получать прибыль от ICO. Во втором
+                            случае будут созданы новые токены. Не проданные токены могут быть сожжены или распеделены
+                            между получателями прибыли. Также в случае создания новых токенов возможен вариант с
+                            отсутствием лимита на количество продаваемых токенов. При создании организации или
+                            голосованием имеется возможность установки не снимаемого запрета на возможность создания
+                            новых токенов.
                         br
                         h4 S-control
                         p.
@@ -168,15 +188,31 @@ html
                         br
                         h4 Limitable
                         p.
-                            abc
+                            Количество токенов, которые можно продать в процессе первичной продажи, может быть
+                            ограничего установленным лимитом. Лимит может быть изменен организацией, за исключением
+                            случаев когда был явно указан запрет на изменения лимита. Также, опционально, лимит может
+                            трактоваться как общее количество токенов прав и не проданные в процессе первичной
+                            продажи права могут быть зачислены на указанный счет, либо распределены между несколькими
+                            счетами в указанной пропорции, а также быть начислены через систему дивидендов огранизации.
                         br
                         h4 Mintable
                         p.
-                            abc
+                            Количество токенов прав может быть изменено, за исключением случаев когда явно был указан
+                            запрет на возможность изменения количества токенов. Созданные токены могут быть начислены
+                            на один или более счетов, а также могут быть начислены через систему дивидендов
+                            организации. При этом возможен вариант с начислением токенов все владельцам этих токенов
+                            прав, либо аналогично владельцам RPO-токенов организации, либо и тем и тем, при этом,
+                            опционально, учитывая минимальный порог количества токенов на счету.
                         br
                         h4 Markable
                         p.
-                            abc
+                            Система токенов прав может быть помечена различными значениями, означающими какие-либо
+                            события, действия или что-либо подобное, описываемое организацией, создавшей этот
+                            RPR-токен прав. Также эта функциональность включает в себя возможность временной заморозки
+                            всех счетов токена, которая может быть использована для проведения организацией
+                            необходимых действий в рамках её бизнес-логики. Также может быть явно указан запрет
+                            на возможность заморозки, либо ограниченно время, на которое может быть заморожен токен,
+                            а также может быть ограничено количество заморозок без возможности увеличения количества.
                         br
                         h3 Features
                         p.
@@ -184,11 +220,20 @@ html
                         br
                         h4 PoS
                         p.
-                            abc
+                            Количество токенов может увеличиваться со временем по приципу Proof of Stake - в
+                            случае если на счету определенное количество времени хранится определенное количество
+                            токенов - на счет начисляются дополнительные токены. Время хранения, минимальный
+                            порог токенов и количество устанавливается при создании. Также настройки могут быть
+                            изменены в процессе голосования владельцев огранизации, создавшей этот RPR-токен прав,
+                            за исключением случая когда при создании токена прав был явно указан запрет на внесение
+                            изменений в PoS.
                         br
                         h4 Replication
                         p.
-                            abc
+                            Система токенов прав может являться копией другой системы токенов прав, с сохранением всех
+                            балансов счетов. Копирование свойств происходит единожды, то есть в техническом плане это
+                            свойство создает форк другой системы токенов прав. Также, при неоходимости, возможно
+                            изменить некоторые из правил системы.
 
         .rp-content.rp-ico.rp-total-divider
             #ico.container
