--- a/views/main.pug
+++ b/views/main.pug
@@ -240,7 +240,13 @@ html
                 .row
                     .col-md-12
                         h2 ICO
-                        p abc
+                        p.
+                            Начало продаж назначено на указанную ниже дату. Суммарное время проведения продаж
+                            - 1 календарный месяц с возможностью сдвига на несколько часов в большую или меньшую
+                            сторону. Сумма собранных средст не ограничена верхней и нижней планкой. Продажа будет
+                            производится за Ethereum (ETH) токены, соотношение соответствует формуле 1ETH = 10RPT.
+                            Установлены бонусы за объем равные: +50% за первые 1000 токенов, +25% за следующие
+                            10 000 токенов, +15% за следующие 10 000 токенов, +5% за следующие 20 000 токенов.
                         .rp-ico-time.text-center 10 января 2018
 
         .rp-content.rp-docs.rp-total-divider
